# elements-of-programming

./: LICENSE  README.md  elements.tex  head.tex  newcommand.tex  newenvironment.tex  newtheorem.tex
cpp/: CMakeLists.txt  intrinsics.h
cpp/eop/: concepts.hpp  intrinsics.hpp  precomp.hpp
cpp/eop/ch-01/: founds.hpp
cpp/eop/ch-02/: transorbs.hpp
cpp/include/eop/: intrinsics.hpp  precomp.hpp
cpp/src/: concepts.hpp  intrinsics.h  intrinsics.hpp  precomp.hpp
cpp/src/ch-01/: founds.h  founds.hpp
julia/src/: intrinsics.jl
julia/src/ch-01/: founds.jl
julia/src/ch-02/: transorbs.jl
math/: elements.pytxcode  elements.tex  head.tex  newcommand.tex  newtheorem.tex  preamble.tex
math/ch-01/: 1-2-values.tex  1-4-procedures.tex  1-5-regtypes.tex  1-6-regprocedures.tex
math/ch-02/: 2-1-trans.tex
